<resources>
    <string name="app_name">RemainingTimes</string>
    <string name="default_day_label">今日の残り時間</string>
    <string name="default_month_label">今月の残り時間</string>
    <string name="default_week_label">今週の残り時間</string>
    <string name="default_year_label">今年の残り時間</string>
    <string name="hourLabel">時間</string>
    <string name="minuteLabel">分</string>
    <string name="title_label">Time left for You</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="time_hint">00:00</string>
    <string name="getup_label">起床時間</string>
    <string name="bedtime_label">就寝時間</string>
    <string name="morning_routine_label">朝ルーティン時間</string>
    <string name="night_routine_label">夜ルーティン時間</string>
    <string name="commuting_label">ワークタイム</string>
    <string name="default_time">00:00</string>
    <string name="from_to">~</string>
    <string name="save_text">保存</string>
    <string name="mode_switch">ClockMode</string>
    <string name="setting">Settings</string>
    <string name="switch_all_time">All Time</string>
    <string name="switch_text_my_time">MyTime</string>
</resources>
